--- a/AIS_System/App.config
+++ b/AIS_System/App.config
@@ -6,7 +6,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-      <add name="AIS_System.My.MySettings.Dataset_Conn_Strings" connectionString="Data Source=(local);Initial Catalog=AIS_Database;Integrated Security=True"
+      <add name="AIS_System.My.MySettings.Dataset_Conn_Strings" connectionString="Data Source=(local);Initial Catalog=agrikulto;Integrated Security=True"
           providerName="System.Data.SqlClient" />
       <add name="AIS_System.My.MySettings.Conn_strings_out" connectionString="Data Source=(local);Initial Catalog=jcso;Integrated Security=True" />
   </connectionStrings>
